Horizontal scroll fix

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,9 +1,11 @@
 .page {
-  box-sizing: border-box;
   scroll-behavior: smooth;
+  // width: 100vw;
+
   &__body {
-    width: 100vw;
+    box-sizing: border-box;
     margin: 0;
+    padding: 0;
     background: #e5e5e5;
   }
 
