--- a/src/styles/blocks/strategic-agency.scss
+++ b/src/styles/blocks/strategic-agency.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  width: 100vw;
+  // width: 100vw;
 
   @include onTablet {
     flex-direction: column;
