--- a/src/styles/blocks/testimonial-card.scss
+++ b/src/styles/blocks/testimonial-card.scss
@@ -31,7 +31,7 @@
       border-radius: 12px;
       transform: rotate(-60deg);
       margin-left: -40%;
-      z-index: -1;
+      z-index: 1;
     }
 
     &::after {
@@ -44,7 +44,7 @@
       border-radius: 12px;
       transform: rotate(-60deg);
       margin-left: 40%;
-      z-index: -1;
+      z-index: 1;
     }
   }
 
